; ModuleID = '/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_encrypt.c_HPDF_PadOrTrancatePasswd.c'
source_filename = "/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_encrypt.c_HPDF_PadOrTrancatePasswd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HPDF_PASSWD_LEN = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [27 x i8] c" HPDF_PadOrTrancatePasswd\0A\00", align 1
@HPDF_PADDING_STRING = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @HPDF_PadOrTrancatePasswd(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = load i64, i64* @HPDF_PASSWD_LEN, align 8
  %8 = add nsw i64 %7, 1
  %9 = call i64 @HPDF_StrLen(i8* %6, i64 %8)
  store i64 %9, i64* %5, align 8
  %10 = call i32 @HPDF_PTRACE(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  %11 = load i32*, i32** %4, align 8
  %12 = load i64, i64* @HPDF_PASSWD_LEN, align 8
  %13 = call i32 @HPDF_MemSet(i32* %11, i32 0, i64 %12)
  %14 = load i64, i64* %5, align 8
  %15 = load i64, i64* @HPDF_PASSWD_LEN, align 8
  %16 = icmp sge i64 %14, %15
  br i1 %16, label %17, label %23

17:                                               ; preds = %2
  %18 = load i32*, i32** %4, align 8
  %19 = load i8*, i8** %3, align 8
  %20 = bitcast i8* %19 to i32*
  %21 = load i64, i64* @HPDF_PASSWD_LEN, align 8
  %22 = call i32 @HPDF_MemCpy(i32* %18, i32* %20, i64 %21)
  br label %41

23:                                               ; preds = %2
  %24 = load i64, i64* %5, align 8
  %25 = icmp sgt i64 %24, 0
  br i1 %25, label %26, label %32

26:                                               ; preds = %23
  %27 = load i32*, i32** %4, align 8
  %28 = load i8*, i8** %3, align 8
  %29 = bitcast i8* %28 to i32*
  %30 = load i64, i64* %5, align 8
  %31 = call i32 @HPDF_MemCpy(i32* %27, i32* %29, i64 %30)
  br label %32

32:                                               ; preds = %26, %23
  %33 = load i32*, i32** %4, align 8
  %34 = load i64, i64* %5, align 8
  %35 = getelementptr inbounds i32, i32* %33, i64 %34
  %36 = load i32*, i32** @HPDF_PADDING_STRING, align 8
  %37 = load i64, i64* @HPDF_PASSWD_LEN, align 8
  %38 = load i64, i64* %5, align 8
  %39 = sub nsw i64 %37, %38
  %40 = call i32 @HPDF_MemCpy(i32* %35, i32* %36, i64 %39)
  br label %41

41:                                               ; preds = %32, %17
  ret void
}

declare dso_local i64 @HPDF_StrLen(i8*, i64) #1

declare dso_local i32 @HPDF_PTRACE(i8*) #1

declare dso_local i32 @HPDF_MemSet(i32*, i32, i64) #1

declare dso_local i32 @HPDF_MemCpy(i32*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
